- https://github.com/eclipse-syson/syson/issues/884[#884] [related-elements] Fix an issue where some error messages were displayed when an element with implicit Specialization was selected and the Related Elements View was displayed.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/829[#829] [metamodel] `OccurrenceUsag#portionKind` is now unsettable and its default value is `null`.
- https://github.com/eclipse-syson/syson/issues/796[#796] [import] Improve the code in import module, by making it more generic
- https://github.com/eclipse-syson/syson/issues/818[#818] [export] Add partial support of `OccurrenceDefinition` and 'OccurrenceUsage` in export from model to textual SysMLv2.
- https://github.com/eclipse-syson/syson/issues/875[#875] [explorer] Improve the support of libraries in the explorer.
The explorer now contains 2 directories:
*  _Standard Libraries_: contains the SysML and KerML libraries
* _Referenced Libraries_: contains non-standard libraries imported by the user
- https://github.com/eclipse-syson/syson/issues/887[#887] [explorer] Rework the structure of standard and user libraries in the explorer.
The explorer now contains the following directories for libraries:
* _Libraries_: top-level container for all the libraries used in the project
** _KerML_: KerML standard libraries
** _SysML_: SysML standard libraries
** _User Libraries_: User-imported libraries
- https://github.com/eclipse-syson/syson/issues/888[#888] [explorer] Remove 'New objects from text' contextual menu entry for libraries.

=== New features

- https://github.com/eclipse-syson/syson/issues/802[#802] [diagrams] Handle imported package elements in diagrams.

== v2024.11.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/699[#699] [general-view] Add CaseUsage and CaseDefinition in General View diagram.
The following classes have been renamed to reflect their new usage: