@@ -27,6 +27,9 @@
 - Fix an issue that made the expand action of the explorer not work on specific filter combinations.
 The explorer now correctly allows to expand elements when the _Hide Root Namespaces_ filter is disabled and the `Hide KerML/SysML Standard Libraries` filter is enabled.
 - Fix an issue where some error messages were displayed when an element with implicit Specialization was selected and the Related Elements View was displayed.
+- Fix deletion of imported models from the explorer.
+Users can now delete imported library _models_ (i.e. models with a `LibraryPackage` element), but they cannot edit them nor delete elements inside them.
+Imported models that do not contain libraries can be modified as regular models created in the project.
 
 == Improvements
 
